--- a/Example_Multivariate.ipynb
+++ b/Example_Multivariate.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Imports"
+    "# Multivariate Example"
    ]
   },
   {
@@ -19,7 +19,6 @@
     "from os import listdir\n",
     "import os\n",
     "import time\n",
-    "from RandTS import *\n",
     "from RandTSMultivariate import *"
    ]
   },
@@ -31,13 +30,16 @@
    "source": [
     "# Set your dataset directory and get the datasets inside.\n",
     "directory = r'Dataset_Multivariate\\\\'\n",
-    "datasets = listdir(directory)"
+    "datasets = listdir(directory)\n",
+    "data_name = datasets[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Create a RandTS instance.\n",
@@ -45,6 +47,72 @@
     "\n",
     "# Add dataset directory to your RandTS instance.\n",
     "r.addDatasetDirectory(directory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load data\n",
+    "X_train, labels_train, X_test, labels_test, ndims = load_data_multivariate(directory,data_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train the model\n",
+    "r.fit(X_train,labels_train,ndims)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Standing' 'Standing' 'Standing' 'Standing' 'Standing' 'Standing'\n",
+      " 'Standing' 'Standing' 'Standing' 'Standing' 'Running' 'Running' 'Running'\n",
+      " 'Running' 'Running' 'Running' 'Running' 'Running' 'Running' 'Running'\n",
+      " 'Walking' 'Walking' 'Walking' 'Walking' 'Walking' 'Walking' 'Walking'\n",
+      " 'Walking' 'Walking' 'Walking' 'Badminton' 'Badminton' 'Badminton'\n",
+      " 'Badminton' 'Badminton' 'Badminton' 'Badminton' 'Badminton' 'Badminton'\n",
+      " 'Badminton']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predict the lables\n",
+    "predicted_labels = r.predict(X_test,labels_test)\n",
+    "print(predicted_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Test accuracy\n",
+    "r.test_accuracy"
    ]
   },
   {
@@ -56,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -68,14 +136,14 @@
       "normalize    False\n",
       "depth            3\n",
       "var              0\n",
-      "oob_acc          1\n",
+      "oob_acc      0.975\n",
       "Name: 3, dtype: object\n"
      ]
     }
    ],
    "source": [
     "# Apply parameter selection. Selected parameters will be hold inside RandTS instance which can be used in future steps.\n",
-    "r.selectParameters('BasicMotions',param_kwargs = {'depth_cv':[3,5,10], 'ntree_cv':[100], 'rep_num':1, 'method_cv':['l','d']})\n"
+    "r.selectParameters(X_train,labels_train,ndims,param_kwargs = {'depth_cv':[3,5,10], 'ntree_cv':[100], 'rep_num':1, 'method_cv':['l','d']})"
    ]
   },
   {
@@ -87,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -95,41 +163,36 @@
      "output_type": "stream",
      "text": [
       "Replication  0\n",
-      "Test Accuracy : 1.0\n",
+      "Test Accuracy:  1.0\n",
       "Replication  1\n",
-      "Test Accuracy : 1.0\n",
+      "Test Accuracy:  1.0\n",
       "Replication  2\n",
-      "Test Accuracy : 1.0\n",
+      "Test Accuracy:  0.975\n",
       "Replication  3\n",
-      "Test Accuracy : 1.0\n",
+      "Test Accuracy:  1.0\n",
       "Replication  4\n",
-      "Test Accuracy : 1.0\n",
+      "Test Accuracy:  1.0\n",
       "Replication  5\n",
-      "Test Accuracy : 1.0\n",
+      "Test Accuracy:  1.0\n",
       "Replication  6\n",
-      "Test Accuracy : 1.0\n",
+      "Test Accuracy:  1.0\n",
       "Replication  7\n",
-      "Test Accuracy : 1.0\n",
+      "Test Accuracy:  1.0\n",
       "Replication  8\n",
-      "Test Accuracy : 1.0\n",
+      "Test Accuracy:  1.0\n",
       "Replication  9\n",
-      "Test Accuracy : 1.0\n"
+      "Test Accuracy:  1.0\n"
      ]
     }
    ],
    "source": [
     "for i in range(10):\n",
     "    print('Replication ',i)\n",
-    "    test_acc, predictions = r.train_test('BasicMotions')\n",
-    "    "
+    "    r = RandTSMultivariate()\n",
+    "    r.fit(X_train,labels_train,ndims)\n",
+    "    predicted_labels = r.predict(X_test,labels_test)\n",
+    "    print('Test Accuracy: ',r.test_accuracy)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -148,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
